# abstract-parser

./: Grammar.md  README.md  TODO.md  abstract-parser.cabal
exe/: Main.hs
lib/: Converge.hs  Generator.hs  Grammar.hs  Zipper.hs
lib/Grammars/: An.hs  AnBmAnBm.hs  TeaParty.hs  Turtle.hs
lib/Text/Parser/: Abstract.hs
