cabal-version: 2.4

name: abstract-parser
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base ^>=4.12.0.0
                 , containers
    default-language: Haskell2010
    default-extensions: RecordWildCards
                      , ScopedTypeVariables
    ghc-options: -Wall -fdefer-typed-holes

library
    import: commons
    hs-source-dirs: lib
    exposed-modules: Grammar
                   , Generator

executable abstract-parser
    import: commons
    build-depends: abstract-parser
    main-is: Main.hs
    hs-source-dirs: exe
